--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sunny Luthra - Traveller - Free Thinker - Blah Blah</title>
+  <title>Joshua Dackers Portfolio</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
@@ -39,10 +39,10 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Sunny Luthra
+                    Joshua Dackers
                 </h2>
                 <h4>
-                    Animator / Photographer
+                    Portfolio
                 </h4>
             </div>
         </header>
@@ -75,13 +75,14 @@
                             </div>
                             <div class="info">
                                 <h2>
-                                    Sunny Luthra
+                                    Joshua Dackers
                                 </h2>
                                 <h4>
-                                    Animator / Photographer
+                                    Software Engineering  2018 Portfolio
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    The Following is a portfolio outlineing my professional and technical proficiency in regaurds to my teams semester tracker project.
+ 
                                 </p>
                             </div>
                         </div>
@@ -95,10 +96,10 @@
                                         <a href="#portfolio">My Portfolio</a>
                                     </li>
                                     <li>
-                                        <a href="#contact">Hire me for your next project</a>
+                                        <a href="#contact">Professional proficiency</a>
                                     </li>
                                     <li>
-                                        <a href="#features">Features</a>
+                                        <a href="#features">Technical proficiency</a>
                                     </li>
                                 </ul>
                             </div>
