minor home page changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Joshua Dackers
+                    Josh Dackers
                 </h2>
                 <h4>
                     Portfolio
@@ -81,6 +81,8 @@
                                     Software Engineering  2018 Portfolio
                                 </h4>
                                 <p>
+								</p>
+								<p>
                                     The Following is a portfolio outlineing my professional and technical proficiency in regaurds to my teams semester tracker project.
  
                                 </p>
@@ -115,21 +117,13 @@
                               </div>
                             </div>
                           </div>
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
-                              <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
-                                <p>Facebook Profile</p>
-                              </div>
-                            </div>
-                          </div>
+                   
                           <div class="g1">
                             <div class="item-box clearfix">
                               <i class="icon-twitter"></i>
                               <div class="item-data">
                                 <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
-                                <p>Twitter Handle</p>
+                                <p>Live software</p>
                               </div>
                             </div>
                           </div>
@@ -380,7 +374,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
+               
             </p>
         </footer>
     </div><!-- #main -->
