--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                                     Software Engineering  2018 Portfolio
                                 </h4>
                                 <p>
-								</p>
-								<p>
+								    <br>
                                     The Following is a portfolio outlineing my professional and technical proficiency in regaurds to my teams semester tracker project.
  
                                 </p>
@@ -112,7 +111,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="dackja1@student.op.ac.nz">sunny@mrova.com</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
