worked on links for email and project

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                   <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
+                  <a href="#portfolio"><i class="icon-heart"></i><span> Professional proficiency</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#contact"><i class="icon-envelope"></i><span> Contact</span></a>
+                  <a href="#contact"><i class="icon-envelope"></i><span> Technical proficiency</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
@@ -111,7 +111,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="dackja1@student.op.ac.nz">sunny@mrova.com</a></h3>
+                                <h3><a href="dackja1@student.op.ac.nz">dackja1@student.op.ac.nz</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
