--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                   <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#portfolio"><i class="icon-heart"></i><span> Professional proficiency</span></a>
+                  <a href="#portfolio"><i class="icon-file-text"></i><span> Professional proficiency</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#contact"><i class="icon-envelope"></i><span> Technical proficiency</span></a>
+                  <a href="#contact"><i class="icon-file-text"></i><span> Technical proficiency</span></a>
                 </li>
             </ul>
           <!-- End Tab List -->
@@ -71,7 +71,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Josh Dackers">
                             </div>
                             <div class="info">
                                 <h2>
