added links for pro page

--- a/index.html
+++ b/index.html
@@ -265,14 +265,18 @@
 				   <p> Below outlines how I conducted my self in a professional and agile manner
 				   through out the project. The key ponits im going to discuss are. </p>
 				   <ul>
-				   <li> Communication </li>
-				   <li> Leadership </li>
-				   <li> Team work </li>
-				   <li> Time Managment </li>
-				   <li> Motivating self and others </li>
+				   <li><a href="#Communication"> Communication </a> </li>
+				   <li><a href="#Leadership"> Leadership </a> </li>
+				   <li><a href="#Team work"> Team work </a> </li>
+				   <li><a href="#Time Managment"> Time Managment </a> </li>
+				   <li><a href="#Motivating self and others"> Motivating self and others </a> </li>
 				   </ul>
-				   <p> As I believe these aspects  lead to the success and at time faliure of the team</p>
-                        
+				   <p> As I believe these aspects  lead to the success and at times faliure of the team</p>
+                   <h3 id="Communication">Communication</h3>	
+<h3 id="Leadership">Leadership</h3>
+<h3 id="Team work">Team work</h3>
+<h3 id="Time Managment">Time Managment</h3>
+<h3 id="Motivating self and others">Motivating self and others</h3>				   
                     
                 </div>
               <!-- End Portfolio Data -->
