removed email link

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="dackja1@student.op.ac.nz">dackja1@student.op.ac.nz</a></h3>
+                                <h3>dackja1@student.op.ac.nz</h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
