--- a/index.html
+++ b/index.html
@@ -274,43 +274,13 @@
               <!-- End Portfolio Data -->
               <!-- Contact Tab Data -->
                 <div id="contact">
-                    <section class="clearfix">
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
-                              <i class="icon-globe"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
-                              <i class="icon-phone"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
-                              <i class="icon-user"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="break"></div>
-                       
-                    </section>
+              <ul>
+				   <li><a href="#Communication"> Communication </a> </li>
+				   <li><a href="#Leadership"> Leadership </a> </li>
+				   <li><a href="#Team work"> Team work </a> </li>
+				   <li><a href="#Time Managment"> Time Managment </a> </li>
+				   <li><a href="#Motivating self and others"> Motivating self and others </a> </li>
+				   </ul>
                 </div>
               <!-- End Contact Data -->
             </div>
