--- a/index.html
+++ b/index.html
@@ -36,16 +36,7 @@
    <div class="main-container">
     <div class="main wrapper clearfix">
       <!-- Header Start -->
-        <header id="header">
-            <div id="logo">
-                <h2>
-                    Josh Dackers
-                </h2>
-                <h4>
-                    Portfolio
-                </h4>
-            </div>
-        </header>
+    
         <!-- Header End -->
         <!-- Main Tab Container -->
         <div id="tab-container" class="tab-container">
@@ -108,11 +99,11 @@
               <!-- Resume Tab Data -->
                 <div id="resume">
                 <h1> Joshua Dackers <h1>
-				<h3>Personal details<h3>
-				<p>Name:	Joshua Dackers
-				   Address:	197A Cumberland street Dunedin
-				   Mobile:	0273471925
-				   Email:	Dackers.josh@gmail.com
+				<h3>Personal details</h3>
+				<p>Name:	Joshua Dackers<br>
+				   Address:	197A Cumberland street Dunedin<br>
+				   Mobile:	0273471925<br>
+				   Email:	Dackers.josh@gmail.com<br>
 				   </p>
 
 				
