--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				   Email:	Dackers.josh@gmail.com<br>
 				   </p>
 				   
-				   <h3> Personal statement <h3>
+				   <h3> Personal statement </h3>
 				   <p>I am Student who has just completed my second year of the Bachelor of Information Technology at the Otago Polytechnic. I have gain experience in a wide verity of technical skills and abilities in the field of information technology. I am looking for a role to further my skills and help me establish my carer in the IT industry </p>
 				   
 				   <h3>Relevant skills and experience</h3>
@@ -143,7 +143,7 @@
 					 <h3> Education and training </h3>
 					 <p>2017-2018 Two years of study in the Bachelor of Information Technology.<br>
                         2011–2013 Four years secondary education</p>
-                     <h3>Referees:</h3>
+                     <h3>Referees</h3>
 				     <p>Teryn Mclaren<br>
 						KFC Manager<br>
 						North Dunedin KFC<br>
