--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				   </p>
 				   
 				   <h3> Personal statement </h3>
-				   <p>I am Student who has just completed my second year of the Bachelor of Information Technology at the Otago Polytechnic. I have gain experience in a wide verity of technical skills and abilities in the field of information technology. I am looking for a role to further my skills and help me establish my carer in the IT industry </p>
+				   <p>I am Student who has just completed my second year of the Bachelor of Information Technology at the Otago Polytechnic. I have gained experience in a wide verity of technical skills and abilities in the field of information technology. I am looking for a role to further these skills and help me establish a career in the IT industry </p>
 				   
 				   <h3>Relevant skills and experience</h3>
 				   <h4>Communication skills</h4>
